Fixed footer on mobile

--- a/assets/scss/components/_footer.scss
+++ b/assets/scss/components/_footer.scss
@@ -1,12 +1,20 @@
 .footer {
   border-top: solid 1px $vv-gray-lightest;
+  padding: $grid-lg 0;
 
-  @include media-breakpoint-up(lg) {
-    &__links-container {
-      text-align: center;
-      
-      &:first-child { text-align: left; }  
-      &:last-child  { text-align: right; }  
+  @include media-breakpoint-up(md) {
+    padding: $grid-xl 0;
+  }
+
+  &__links-container {
+    padding: $grid-md 0;
+    text-align: center;
+
+    @include media-breakpoint-up(md) {
+      padding: $grid-sm 0;
+
+      &:first-child { text-align: left; }
+      &:last-child  { text-align: right; }
     }
   }
 
